--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 </head>
 
 <body>
+    <div class="teams-wrapper">
+        <h3>Microsoft Teams</h3>
+        <div class="teams-container">
+
+        </div>
+
+    </div>
 
 
     <script src="index.js"></script>
