feat: onclick works!

--- a/index.html
+++ b/index.html
@@ -13,8 +13,25 @@
     <div class="teams-wrapper">
         <h3>Microsoft Teams</h3>
         <div class="teams-container">
+            <div class="signin-logo">
+                <img src="image/msteams.png" alt="" width="300px">
+            </div>
+
+            <div class="signin-title">
+                <h2>Enter your work, school, <br>
+                    or Microsoft account</h2>
+            </div>
+            <div class="signin-container">
+                <div class="signin-input">
+                    <input type="email" placeholder="Sign-in address" required id="input-email">
+                </div>
+                <div class="btn">
+                    <button>Sign in</button>
+                </div>
+            </div>
 
         </div>
+        <p>Not on Teams yet? <span><a href="">Learn More</a></span></p>
 
     </div>
 
