feat: email validation works

--- a/index.html
+++ b/index.html
@@ -22,16 +22,20 @@
                     or Microsoft account</h2>
             </div>
             <div class="signin-container">
-                <div class="signin-input">
-                    <input type="email" placeholder="Sign-in address" required id="input-email">
-                </div>
-                <div class="btn">
-                    <button>Sign in</button>
-                </div>
+                <form>
+                    <div class="signin-input">
+                        <input type="email" placeholder="Sign-in address" required id="input-email">
+                    </div>
+                    <div class="btn">
+                        <button id="btn">Sign in</button>
+                    </div>
+                </form>
+
             </div>
 
         </div>
-        <p>Not on Teams yet? <span><a href="">Learn More</a></span></p>
+        <p>Not on Teams yet? <span id="learnmore"><a href="#">Learn More</a></span></p>
+        <button class="btn-signup"> Sign up for free</button>
 
     </div>
 
