fix: style refactor

--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
             </div>
 
         </div>
-        <p>Not on Teams yet? <span id="learnmore"><a href="#">Learn More</a></span></p>
+        <div class="teams-details">
+            <p>Not on Teams yet? <span id="learnmore"><a href="#">Learn More</a></span></p>
+        </div>
         <button class="btn-signup"> Sign up for free</button>
 
     </div>
