--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
             <div class="signin-title">
                 <h2>Enter your work, school, <br>
-                    or Microsoft account</h2>
+                    or Microsoft account.</h2>
             </div>
             <div class="signin-container">
                 <form>
